examples/test/testpolicy3417.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3417
  namespace: namespace254
spec:
  podSelector:
    matchLabels:
      key46: value4
      key6: value5
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value6
      podSelector:
        matchLabels:
          key29: value2
          key2: value38
          key34: value17
